--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# For Jekyll:
+_site/
+.sass-cache/
+.jekyll-cache/
+.jekyll-metadata
+
+
+# For Python:
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
