--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 plugins:
   # to see sitemap, use /sitemap.xml
   - jekyll-sitemap
+  # to use jupyter notebook: https://github.com/red-data-tools/jekyll-jupyter-notebook
+  - jekyll-jupyter-notebook
 
 collections:
   creators:
